# classdiscovery

./: CMakeLists.txt  README.md
include/: discoverydeviceclass.h  discoveryhostclass.h
src/: discoverydevice_main.cpp  discoverydeviceclass.cpp  discoveryhost_main.cpp  discoveryhostclass.cpp
